--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@
 .mySlides {
     display: none;
     width: 100%;
+    position: relative;
+    z-index: 0;
 }
 
 .mySlides img {
@@ -24,14 +26,32 @@
   }
 /* ....................................................... Navbar */
 
-nav {
+.navbar {
+    display: flex;
     background-color: gold;
     overflow: hidden;
-    height: 75px;
+    /* height: 75px; */
+    padding-top: 10px;
+  }
+
+  .navbar-left {
+    height: 100px;
+  }
+
+  .navbar-right {
+    padding-top: 10px;
+    padding-left: 55px;
+    display: flex;
+    margin: 0 auto;
+    
   }
 
   
-  nav ul {
+
+  
+
+  
+  /* nav ul {
     list-style-type: none;
     margin: 0;
     padding: 5px 60px 0px 0;
@@ -40,7 +60,7 @@ nav {
     letter-spacing: 5px;
     gap: 15px;
 
-  }
+  } */
   
  /* nav li {
     display: flex;
@@ -65,13 +85,18 @@ nav {
     border-radius: 5px;
   }
 
-  .hero-logo {
-    width: 60px;
-    position: relative;
-    right: 1440px;
-    bottom: 13px;
-    border-radius: 5px;
+  .logo {
+    margin-left: 30px;
+    position: absolute;
+    z-index: 1;
+    border-radius: 10px;
+    height: 20%;
+    width: 15%;
+    object-fit: cover;
   }
+
+
+
 
   /* ............................................................... Content */
 
@@ -133,3 +158,37 @@ nav {
     background-color: #3235e2; /* Button color on click */
     transform: translateY(8px); /* Push the button down when clicked */
   }
+
+  @media screen and (max-width: 600px) {
+
+      .navbar {
+        width: 600px;
+      }
+
+
+      .navbar-right {
+        padding-top: 10px;
+        padding-left: 55px;
+        display: flex;
+        /* background-color: black; */
+        
+      }
+
+      .logo {
+        width: 150px;
+        height: 150px;
+      }
+
+      .header1 {
+        height: 100%;
+      }
+      
+      .content-text {
+        font-size: 25px;
+        text-align: center;
+      }
+
+    
+    }
+
+  
