--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,225 +4,96 @@
     border: 0;
 }
 
-.header1 {
-    height: 800px;
-    position: relative;
-    margin: auto;
-    overflow: hidden;
-    margin: 0;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Varela Round', sans-serif;
 }
 
-.mySlides {
-    display: none;
-    width: 100%;
-    position: relative;
-    z-index: 0;
-}
-
-.mySlides img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-
-  .img-background {
-    
-  }
-/* ....................................................... Navbar */
+/*  ................................... navigation */
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    background-color: gold;
-    overflow: hidden;
-    /* height: 75px; */
-    padding-top: 10px;
-  }
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  background-color: gold;
+}
 
-  .navbar-left {
-    height: 100px;
-    margin-left: 20px;
-  }
+.navbar-right {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin-right: 50px;
+}
 
-  .navbar-right {
-    padding-top: 10px;
-    padding-right: 100px;
-    display: flex;
-    justify-content: center;
-    z-index: 1;
-    
-  }
+.navbar-right {
+  font-size: 30px;
+}
 
-  .menu {
-    font-family: 'Happy Monkey', sans-serif;
-    font-size: 40px;
+.menu, .story {
+  text-decoration: none;
+  color: #282828;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
 
-  }
+.menu:hover,
+.story:hover {
+  color: rgb(105, 102, 102);
+  box-shadow: 5px 10px 40px;
+}
 
-  .story {
-    font-family: 'Happy Monkey', sans-serif;
-    font-size: 40px;
-  }
+.logo {
+  top: 30px;
+  left: 80px;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
 
-  
+.thankYou {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  padding-left: 150px;
+  text-shadow: 0 0 3px limegreen;
+  /* margin-left: 50px; */
 
-  
+}
 
-  
-  /* nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 5px 60px 0px 0;
-    display: flex;
-    justify-content: end;
-    letter-spacing: 5px;
-    gap: 15px;
+h1 {
+  text-align: center;
+}
 
-  } */
-  
- /* nav li {
-    display: flex;
- } */
-    
+/*   ........................................Content */
 
-  
-  
-  nav a {
-    display: flex;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  nav a:hover {
-    background-color: #edf04d;
-    border-radius: 5px;
-  }
+.mySlides {
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
+}
 
-  .logo {
-    margin-top: 30px;
-    margin-left: 30px;
-    position: absolute;
-    z-index: 1;
-    border-radius: 10px;
-    height: 20%;
-    width: 15%;
-    object-fit: cover;
-  }
-
-
-
-
-  /* ............................................................... Content */
-
-  .content-text {
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    padding: 25px 0 40px 0;
-  }
-
-#content {
-    background: gold;
+.content {
+  background-color: goldenrod;
 }
 
 .content-img {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    justify-content: space-around;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  width: 1400px;
 }
 
-.rossi-pit {
-    width: 540px;
-    margin-top: 20px;
-    margin-right: 150px;
-    border-radius: 10px;
-    border: 3px solid silver;
+.content-text {
+  text-align: center;
+  padding: 20px 0;
+  text-shadow: 0 0 3px limegreen;
 }
 
-.rossi-ymh {
-    margin-top: 20px;
-    margin-left: 50px;
-    border-radius: 20px;
-    border: 3px solid silver;
-    position: absolute;
+.rossi-img {
+  width: 600px;
+  height: 500px;
 }
-
-.rossi-btn {
-    background: #0d11dd;
-    padding: 8px 16px;
-    font-family: 'Exo', sans-serif;
-    font-size: 20px;
-    border-radius: 5px;
-    color: #edf04d;
-    position: relative;
-    top: 300px;
-    left: 350px;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    transition-duration: 0.3s; 
-}
-
-.rossi-btn:hover {
-    background: #3235e2;
-}
-
-.rossi-btn:active {
-    background-color: #3235e2; /* Button color on click */
-    transform: translateY(8px); /* Push the button down when clicked */
-  }
-
-  @media screen and (max-width: 600px) {
-
-      .navbar {
-        width: 600px;
-      }
-
-
-      .navbar-right {
-        display: flex;
-        margin-right: 70px;
-        /* background-color: black; */
-        
-      }
-
-      .logo {
-        width: 120px;
-        height: 120px;
-      }
-
-      .mySlides {
-        max-width: 450px;
-      }
-
-      .header1 {
-        height: 100%;
-      }
-      
-      .content-text {
-        font-size: 25px;
-        text-align: center;
-      }
-
-      .menu {
-        font-family: 'Happy Monkey', sans-serif;
-        font-size: 30px;
-    
-      }
-    
-      .story {
-        font-family: 'Happy Monkey', sans-serif;
-        font-size: 30px;
-        
-      }
-
-    
-    }
-
-  
